<resources>
    <string name="app_name">TimeSchedule</string>

    <string name="_1mon">1mon</string>
    <string name="_1tues">1tues</string>
    <string name="_1wednes">1wednes</string>
    <string name="_1thurs">1thurs</string>
    <string name="_1fri">1fri</string>

    <string name="_1textview">TextView</string>
    <string name="_2textview">TextView</string>
    <string name="_3textview">TextView</string>
    <string name="_4textview">TextView</string>
    <string name="_5textview">TextView</string>
    <string name="_6textview">TextView</string>
    <string name="_7textview">TextView</string>
    <string name="_8textview">TextView</string>
    <string name="_9textview">TextView</string>
    <string name="_10textview">TextView</string>
    <string name="_11textview">TextView</string>
    <string name="_12textview">TextView</string>
    <string name="_13textview">TextView</string>
    <string name="_14textview">TextView</string>
    <string name="_15textview">TextView</string>
    <string name="_16textview">TextView</string>
    <string name="_17textview">TextView</string>
    <string name="_18textview">TextView</string>
    <string name="_19textview">TextView</string>
    <string name="_20textview">TextView</string>



    <string name="button">Button</string>
    <string name="title_home" />
    <string name="title_dashboard" />
    <string name="title_notifications" />
    <string name="returnbutton">戻る</string>
    <string name="todo">TODO</string>
    <string name="img_description1">image1</string>
    <string name="_kamoku">TextView</string>
    <string name="_tantou">TextView</string>
    <string name="_basyo">TextView</string>
    <string name="tani">TextView</string>
    <string name="textview">TextView</string>
    <string name="tantou">担当</string>
    <string name="basyo">場所</string>
    <string name="kamoku">科目</string>
    <string name="tanni">単位</string>
    <string name="iro">色</string>
    <string name="tantou1">Name</string>
    <string name="basyo1">Name</string>
    <string name="kamoku1">Name</string>
    <string name="tanni1">Number</string>
    <string name="kakutei">決定</string>


</resources>
