<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <TableLayout
        android:id="@+id/tableLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.38"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TableRow
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textView39"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="時限/曜日" />

            <TextView
                android:id="@+id/textView40"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="月"
                android:textColor="@color/design_default_color_primary" />

            <TextView
                android:id="@+id/textView41"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="火"
                android:textColor="@android:color/holo_red_light" />

            <TextView
                android:id="@+id/textView42"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="水"
                android:textColor="@android:color/holo_blue_bright" />

            <TextView
                android:id="@+id/textView43"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="木"
                android:textColor="@android:color/holo_green_dark" />

            <TextView
                android:id="@+id/textView44"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="金"
                android:textColor="@android:color/holo_orange_light" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="１限目"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/text1"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1mon" />

            <TextView
                android:id="@+id/text2"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1tues" />

            <TextView
                android:id="@+id/text3"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1wednes" />

            <TextView
                android:id="@+id/text4"
                android:layout_width="57dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1thurs" />

            <TextView
                android:id="@+id/text5"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1fri" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView15"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="２限目"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/text6"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_1textview" />

            <TextView
                android:id="@+id/text7"
                android:layout_width="58dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_2textview" />

            <TextView
                android:id="@+id/text8"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_3textview" />

            <TextView
                android:id="@+id/text9"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_4textview" />

            <TextView
                android:id="@+id/text10"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_5textview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="127dp">

            <TextView
                android:id="@+id/textView21"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="３限目"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/text11"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_6textview" />

            <TextView
                android:id="@+id/text12"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_7textview" />

            <TextView
                android:id="@+id/text13"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_8textview" />

            <TextView
                android:id="@+id/text14"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_9textview" />

            <TextView
                android:id="@+id/text15"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_10textview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="４限目"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/text16"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_11textview" />

            <TextView
                android:id="@+id/text17"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_12textview" />

            <TextView
                android:id="@+id/text18"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_13textview" />

            <TextView
                android:id="@+id/text19"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_14textview" />

            <TextView
                android:id="@+id/text20"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_15textview" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textView33"
                android:layout_width="wrap_content"
                android:layout_height="100dp"
                android:gravity="center_horizontal"
                android:text="５限目"
                android:textColor="@android:color/holo_orange_dark" />

            <TextView
                android:id="@+id/text21"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_16textview" />

            <TextView
                android:id="@+id/text22"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_17textview" />

            <TextView
                android:id="@+id/text23"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_18textview" />

            <TextView
                android:id="@+id/text24"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_19textview" />

            <TextView
                android:id="@+id/text25"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/_20textview" />
        </TableRow>
    </TableLayout>

    <Button
        android:id="@+id/toSub1Button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tableLayout" />

</androidx.constraintlayout.widget.ConstraintLayout>