<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SubActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="0dp"
        android:layout_height="796dp"
        android:contentDescription="@string/img_description1"
        android:scaleType="centerCrop"
        android:src="@drawable/img_1"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/basyo"
        android:layout_width="0dp"
        android:layout_height="18dp"
        android:layout_marginStart="39dp"
        android:layout_marginLeft="39dp"
        android:layout_marginTop="77dp"
        android:layout_marginEnd="66dp"
        android:layout_marginRight="66dp"
        android:text="@string/basyo"
        app:layout_constraintEnd_toStartOf="@+id/editText3"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <TextView
        android:id="@+id/kamoku"
        android:layout_width="0dp"
        android:layout_height="21dp"
        android:layout_marginStart="40dp"
        android:layout_marginLeft="40dp"
        android:layout_marginEnd="79dp"
        android:layout_marginRight="79dp"
        android:layout_marginBottom="63dp"
        android:text="@string/kamoku"
        app:layout_constraintBottom_toTopOf="@+id/tantou"
        app:layout_constraintEnd_toEndOf="@+id/tantou"
        app:layout_constraintEnd_toStartOf="@+id/editText1"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/tantou"
        android:layout_width="0dp"
        android:layout_height="22dp"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="31dp"
        android:text="@string/tantou"
        app:layout_constraintBottom_toTopOf="@+id/editText3"
        app:layout_constraintEnd_toEndOf="@+id/basyo"
        app:layout_constraintStart_toStartOf="@+id/basyo"
        app:layout_constraintTop_toTopOf="@+id/editText2" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="39dp"
        android:layout_marginRight="39dp"
        android:layout_marginBottom="334dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toTopOf="@+id/result_bt"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/kamoku"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="31dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintStart_toStartOf="@+id/editText1"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <EditText
        android:id="@+id/editText3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="65dp"
        android:layout_marginRight="65dp"
        android:autofillHints=""
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/basyo"
        app:layout_constraintStart_toStartOf="@+id/editText2"
        app:layout_constraintTop_toBottomOf="@+id/editText2" />

    <Button
        android:id="@+id/result_bt"
        android:layout_width="170dp"
        android:layout_height="0dp"
        android:layout_marginBottom="251dp"
        android:text="@string/kakutei"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText1" />

    <Button
        android:id="@+id/iro_bt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="12dp"
        android:layout_marginLeft="12dp"
        android:layout_marginTop="60dp"
        android:text="@string/iro"
        app:layout_constraintStart_toStartOf="@+id/editText3"
        app:layout_constraintTop_toBottomOf="@+id/editText3" />


</androidx.constraintlayout.widget.ConstraintLayout>